syntax = "proto3";
option java_package = "com.newbit.common.proto.push";
option java_outer_classname = "SpotProfitLossProto";

message SpotProfitLoss {
    sint64 uid = 1;
    string orderId = 2;
    int32 businessId = 3;
    string orderState = 4;
    int32 tradeId = 5;
    string symbol = 6;
    string reason = 7;
}